# python-vlc-rm

./: Makefile  README.rst  SPD_REF.npy  SerFlux_data.out  pyproject.toml  setup.cfg  setup.py
docs/: installation.rst
examples/: example_customLED.ipynb  example_ser_estimation.ipynb  simulation-experimental-validation.ipynb
examples/spectral_data/: wall_floor.csv  wall_green.csv  wall_red.csv  wall_white.csv
src/: indoorenv.py
src/vlc_rm/: constants.py  indoorenv.py  loader.py  photodetector.py  recursivemodel.py  ser.py  transmitter.py
src/vlc_rm/led/: rgb-phosphor-spectrum.txt
src/vlc_rm/sensors/: ResponsivityTCS34725.txt
tests/: test_indoorenv.py  test_photodetector.py  test_plot_led_pd.py  test_recursivemodel  test_recursivemodel.py  test_responses.py  test_results.py  test_ser.py  test_ser_curves.py  test_transmitter.py  test_vlc_qcsk.py  test_vlc_rm.py  test_vlc_tcsk.py
tests/ser_flux_curves/: SER-Flux_dataPD1.txt  SER-Flux_dataPD2.txt  SER-Flux_dataPD3.txt  SER-Flux_dataPD4.txt  SER-Flux_dataPD5.txt  SER-Flux_dataPD6.txt
