[build-system]
requires = [
    "setuptools>=30.3.0",
    "wheel",
    "setuptools_scm>=3.3.1",
    "numpy>=1.23.3",
    "luxpy>=1.9.8",
    "scipy>=1.9.3",
    "pytest>=8.0.0"
]

# [project]
# name = "python-vlc-rm"
# authors = [
#     {name = "Juan F. Gutiérrez", email = "jufgutierrezgo@unal.edu.co"}
# ] 
# maintainers = [
#     {name = "Juan F. Gutiérrez", email = "jufgutierrezgo@unal.edu.co"}
# ]
# readme = "README.rst"
# license = {file = "LICENSE"}
# keywords = ["visible light communication", "color shift keying", "indoor channel model"]

# [project.urls]
# Homepage = ""
# Documentation = ""
# Repository = "https://github.com/jufgutierrezgo/python-vlc-rm.git"

[tool.blue]
line-length = 140
target-version = ['py37']
skip-string-normalization = true

[tool.poetry]
name = "vlc-rm"
version = "1.1.0"
description = "Indoor VLC model for Color Shift Keying modulation."
authors = ["Juan F. Gutiérrez"]
license = "BSD 3-Clause"
readme = "README.rst"